# wenet

runtime/device/android/wenet/app/: build.gradle
runtime/device/android/wenet/app/src/main/cpp/: CMakeLists.txt  wenet.cc
wenet/transformer/: asr_model.py  decoder.py
wenet/utils/: common.py  mask.py
